--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
   padding-top: 6rem;
   background-color: #f2ebe9;
 }
-
+p.lead {
+  font-family: "cursive", Brush Script MT;
+}
 #about {
   background-color: #fac37b;
 }
